# TS-TP3

./: .gitignore  app.js  package-lock.json  package.json
app/: app.js  package-lock.json  package.json
app/controllers/: user.js
app/public/stylesheets/: style.css
app/routes/: index.js
app/views/: homePage.jade  layout.jade  myError.jade  regist.jade
fuse-module/: CMakeLists.txt  passthrough.c  passthrough_helpers.h
fuse-module-py/: authorize.py  passthroughfs.py  requirements.txt  test.py
fuse-module/CMake/: FindFUSE.cmake
providers/: filesystem.js  request-cache.js
web-app/: .env.example  .gitignore  app.js  package-lock.json  package.json
web-app/controllers/: api.js  auth.js  users.js
web-app/middleware/: logged-in.js
web-app/models/: user.js
web-app/oldviews/: homePage.pug
web-app/providers/: request-cache.js
web-app/public/stylesheets/: style.css
web-app/routes/: api.js  auth.js  index.js  oldindex.js  users.js
web-app/views/: account.pug  authorization.pug  code-input.pug  email-template.pug  layout.pug  login.pug  register.pug  welcome.pug
